--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
   <div class="wrapper">
     <header>
       <h1>
-        <p class="blog-title">The Tech Blog <i class="large material-icons">laptop_mac</i></p>
+        <p class="blog-title">My Tech Blog <i class="large material-icons">laptop_mac</i></p>
       </h1>
     
     <nav>
